--- a/AULAS/Aula-11/index.html
+++ b/AULAS/Aula-11/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Testando condições em JavaScript</title>
 </head>
 <body>
+    <h1>Sistema de multas</h1>
+   Velocidade do carro: <input type="number" name="txtvel" id="txtvel" placeholder="Informe sua velocidade"> Km/h
+    <input type="button" value="Verificar" id="btn1" onclick="calcular()">
+    <br>
+    <div id="res"></div>
+    <div id="res2"></div>
+   
     
+
+    <script>
+    function calcular(){
+        var txtv = document.querySelector('input#txtvel')
+        var res = document.querySelector('div#res')
+        var result = document.querySelector('div#res2')
+        var vel = Number(txtv.value)
+        res.innerHTML = `<p>Sua velocidade atual é de ${vel}Km/h</p>`
+        if(vel > 60){ 
+            res.innerHTML += `<p>Você ultrapassou o limite de velocidade. <strong>MULTADO!!</strong></p>`
+        }
+        else {
+            res.innerHTML +=`<p>Muito bem!, Está tudo certinho por aqui :)</p>`      }
+
+       }
+    </script>
 </body>
 </html>
